Fixed possible contrast issues

--- a/final/styles/index-small.css
+++ b/final/styles/index-small.css
@@ -275,6 +275,7 @@
         color: var(--chess-light-green);
         padding-left: 1rem;
         font-size: 2.5rem;
+        text-shadow: 2px 2px 4px var(--chess-black);
     }
 
     article{
